# PW_HW_6

./: README.md  pyproject.toml  query_1.sql  query_10.sql  query_11.sql  query_12.sql  query_2.sql  query_3.sql  query_4.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql  query_handler.py  simple_script.py  table_faker.py
python_query/: Course_Teaher.py  Courses_by_student.py  avarage_on_groups.py  avarage_on_sub.py  average_grade_by_teacher.py  best_student.py  create_database.py  grades_subject_group.py  students_by_group.py  students_by_teache_by_group.py  top_query.py
