[tool.poetry]
name = "pw-hw-6"
version = "0.1.0"
description = ""
authors = ["Weiss1985 <weiss1985@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
asyncpg = "^0.29.0"
Faker = "^22.5.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
